# works-on-my-machine

./: README.md  pyproject.toml
src/works_on_my_machine/: cli.py
